# near-secret-letter

sl-contract/: Cargo.toml
sl-contract/nft/: Cargo.toml
sl-contract/nft/src/: lib.rs
sl-fe/: package.json
sl-fe/public/: index.html  manifest.json
sl-fe/src/: App.js  Home.js  Loading.js  RankingList.js  SecretLetter.js  SecretMessage.js  SecretMessage2.js
sl-fe/src/utils/: util.js
