[package]
name = "secret-letter-contract"
version = "1.1.0"
authors = ["Near Inc <hello@near.org>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "4.0.0-pre.7"
near-contract-standards = "4.0.0-pre.7"
rand = "0.8.4"
getrandom = { version = "0.2", features = ["js"] }
hex = "0.4.3"